--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -10,7 +10,7 @@
     <ImageView
         android:id="@+id/logo"
         android:paddingTop="100dp"
-        android:src="@drawable/coursesapp"
+        android:src="@drawable/enlish"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:scaleType="fitCenter"
