--- a/app/src/main/res/layout/cell_card_tenses.xml
+++ b/app/src/main/res/layout/cell_card_tenses.xml
@@ -28,7 +28,7 @@
         <de.hdodenhof.circleimageview.CircleImageView
             android:id="@+id/image"
             android:layout_width="100dp"
-            android:layout_height="60dp"
+            android:layout_height="70dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_cloud_off_black_24dp"
             />
@@ -36,13 +36,13 @@
         <TextView
             android:id="@+id/text"
             android:layout_width="match_parent"
-            android:layout_height="60dp"
+            android:layout_height="wrap_content"
             android:padding="30dp"
             android:paddingTop="20dp"
             android:textAlignment="center"
             tools:text="Sumenep"
             android:fontFamily="sans-serif"
-            android:textColor="#333"
+            android:textColor="#000"
             android:textSize="18sp"
             />
         <!-- android:background="?android:selectableItemBackground"-->
