--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#5fb0c9"
@@ -44,7 +45,6 @@
                     android:id="@+id/edit_text_email_id"
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
-                    android:drawableLeft="@drawable/ic_person_outline_black_24dp"
                     android:drawableTint="#FF4081"
                     android:singleLine="true"
                     android:hint="Email"
@@ -61,8 +61,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:singleLine="true"
-                    android:drawableLeft="@drawable/ic_key_black_24dp"
-                    android:drawableTint="#FF4081"
+                     android:drawableTint="#FF4081"
                     android:hint="Password"
                     android:inputType="numberPassword" />
             </android.support.design.widget.TextInputLayout>
@@ -106,6 +105,5 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
         android:background="@drawable/user_image_profile_background"
-        android:elevation="4dp"
-        android:src="@drawable/ic_person_outline_black_24dp" />
-</RelativeLayout>
+        android:elevation="4dp"/>
+        </RelativeLayout>
