--- a/app/src/main/res/layout/activity_course_detail.xml
+++ b/app/src/main/res/layout/activity_course_detail.xml
@@ -35,6 +35,12 @@
                 android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax"
                 />
+            <TextView
+                android:id="@+id/id"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:visibility="gone"
+                android:text="id"/>
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
@@ -52,52 +58,11 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         >
 
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <android.support.v7.widget.CardView
+            <android.support.v7.widget.RecyclerView
+                xmlns:android="http://schemas.android.com/apk/res/android"
+                android:id="@+id/recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="24dp"
-                app:cardElevation="8dp"
-                app:cardUseCompatPadding="true">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-                    <TextView
-                        android:id="@+id/title"
-                        android:text="title"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="@dimen/spacing_large"
-                        android:layout_marginRight="@dimen/spacing_large"
-                        android:layout_marginTop="@dimen/spacing_large"
-                        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
-
-                    <TextView
-                        android:id="@+id/txtContent"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:textSize="20sp"
-                        android:lineSpacingExtra="8dp"
-                        android:text="content"
-                        android:padding="@dimen/activity_horizontal_margin"
-                        />
-                    <TextView
-                        android:id="@+id/id"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:visibility="gone"
-                        android:text="id"/>
-
-                </LinearLayout>
-
-            </android.support.v7.widget.CardView>
-        </FrameLayout>
-
+                android:layout_height="match_parent"/>
 
     </android.support.v4.widget.NestedScrollView>
 
