--- a/app/src/main/res/layout/cell_contentcourse.xml
+++ b/app/src/main/res/layout/cell_contentcourse.xml
@@ -4,9 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="24dp"
-    app:cardElevation="8dp"
-    app:cardUseCompatPadding="true">
+    app:cardElevation="2dp"
+    android:layout_margin="2dp"
+    app:cardBackgroundColor="@android:color/white"
+    app:cardCornerRadius="2dp">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -17,9 +18,9 @@
             android:text="title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="@dimen/spacing_large"
             android:layout_marginRight="@dimen/spacing_large"
-            android:layout_marginTop="@dimen/spacing_large"
+            android:layout_marginTop="1dp"
+            android:padding="5dp"
             android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
 
         <TextView
@@ -29,7 +30,7 @@
             android:textSize="20sp"
             android:lineSpacingExtra="8dp"
             android:text="content"
-            android:padding="@dimen/activity_horizontal_margin"
+            android:padding="5dp"
             />
 
     </LinearLayout>
