--- a/app/src/main/res/layout/cell_card.xml
+++ b/app/src/main/res/layout/cell_card.xml
@@ -4,7 +4,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
 
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="2dp"
@@ -15,14 +14,10 @@
         android:layout_height="wrap_content"
         android:orientation="vertical">
 
-        <!-- Les CardView agissent comme des FrameLayout,
-         pour avoir une organisation verticale nous devons
-         donc rajouter un LinearLayout -->
-
         <ImageView
             android:id="@+id/image"
             android:layout_width="match_parent"
-            android:layout_height="200dp"
+            android:layout_height="100dp"
             android:scaleType="centerCrop"
             app:srcCompat="@drawable/ic_cloud_off_black_24dp"
              />
@@ -31,14 +26,13 @@
             android:id="@+id/text"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/titlecolorbg"
+            android:background="@color/transparent"
             android:padding="20dp"
+            android:textStyle="bold"
             tools:text="Sumenep"
-            android:fontFamily="sans-serif"
             android:textColor="#333"
             android:textSize="18sp"
             />
-        <!-- android:background="?android:selectableItemBackground"-->
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
