--- a/app/src/main/res/layout/cell_card_tenses.xml
+++ b/app/src/main/res/layout/cell_card_tenses.xml
@@ -4,33 +4,23 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
-
+    android:layout_weight="1"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="2dp"
     app:cardElevation="2dp">
-
-    <!-- Les CardView possèdent des attributs supplémentaires dont
-         - cardBackgroundColor
-         - cardElevation pour l'élévation (donc aussi l'ombre)
-         - cardCornerRadius pour arrondir les angles
-     -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <!-- Les CardView agissent comme des FrameLayout,
-         pour avoir une organisation verticale nous devons
-         donc rajouter un LinearLayout -->
 
-        <de.hdodenhof.circleimageview.CircleImageView
+        <ImageView
             android:id="@+id/image"
-            android:layout_width="100dp"
-            android:layout_height="70dp"
-            android:scaleType="centerCrop"
-            android:src="@drawable/enlish"
+            android:layout_marginLeft="5dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/tense"
             />
         <LinearLayout
             android:layout_width="wrap_content"
@@ -41,22 +31,21 @@
                 android:id="@+id/text"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingTop="5dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 tools:text="Sumenep"
-                android:fontFamily="sans-serif"
                 android:textColor="#000"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 />
             <TextView
                 android:id="@+id/text2"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp"
-                android:layout_marginLeft="5dp"
+                android:layout_marginLeft="10dp"
                 tools:text="Sumenep"
-                android:fontFamily="sans-serif"
                 android:textColor="#000"
-                android:textSize="12sp"
+                android:textSize="14sp"
                 />
 
         </LinearLayout>
