--- a/app/src/main/res/layout/cell_contentcourse.xml
+++ b/app/src/main/res/layout/cell_contentcourse.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
+
+<FrameLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 <android.support.v7.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    app:cardElevation="2dp"
-    android:layout_margin="2dp"
+    app:cardElevation="1dp"
+    app:cardUseCompatPadding="true"
     app:cardBackgroundColor="@android:color/white"
     app:cardCornerRadius="2dp">
 
@@ -18,20 +24,25 @@
             android:text="title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginRight="@dimen/spacing_large"
             android:layout_marginTop="1dp"
             android:padding="5dp"
-            android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>
+            android:textColor="@color/white"
+            android:background="@drawable/titlebg"
+            android:textSize="20dp"
+            android:layout_margin="2dp"/>
 
         <TextView
             android:id="@+id/txtContent"
+            android:layout_marginTop="5dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
-            android:lineSpacingExtra="8dp"
+            android:layout_margin="2dp"
+            android:background="@drawable/contentbg"
             android:text="content"
-            android:padding="5dp"
+            android:padding="3dp"
             />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
+</FrameLayout>
