--- a/app/src/main/res/layout/cell_formula.xml
+++ b/app/src/main/res/layout/cell_formula.xml
@@ -4,29 +4,19 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="5dp"
+    android:layout_margin="0dp"
+    app:cardCornerRadius="2dp"
+    app:cardElevation="1dp"
+    android:id="@+id/linearcard">
 
-    app:cardBackgroundColor="@android:color/holo_orange_dark"
-    app:cardCornerRadius="4dp"
-    app:cardElevation="4dp">
-
-    <!-- Les CardView possèdent des attributs supplémentaires dont
-         - cardBackgroundColor
-         - cardElevation pour l'élévation (donc aussi l'ombre)
-         - cardCornerRadius pour arrondir les angles
-     -->
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-        <!-- Les CardView agissent comme des FrameLayout,
-         pour avoir une organisation verticale nous devons
-         donc rajouter un LinearLayout -->
-
         <LinearLayout
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
             <TextView
@@ -34,11 +24,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp"
+                android:paddingLeft="8dp"
                 tools:text="title"
                 android:textStyle="bold"
-                android:fontFamily="sans-serif"
                 android:textColor="#000"
-                android:textSize="14sp"
+                android:textSize="24sp"
                 />
             <TextView
                 android:id="@+id/tvsub1"
@@ -46,9 +36,9 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp"
                 tools:text="Sub 1"
-                android:fontFamily="sans-serif-smallcaps"
+                android:paddingLeft="8dp"
                 android:textColor="#000"
-                android:textSize="12sp"
+                android:textSize="20sp"
                 />
             <TextView
                 android:id="@+id/tvsub2"
@@ -56,9 +46,10 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp"
                 tools:text="Sub 2"
+                android:paddingLeft="8dp"
                 android:fontFamily="sans-serif-smallcaps"
                 android:textColor="#000"
-                android:textSize="12sp"
+                android:textSize="20sp"
                 />
             <TextView
                 android:id="@+id/tvsub3"
@@ -66,9 +57,10 @@
                 android:layout_height="wrap_content"
                 android:paddingTop="5dp"
                 tools:text="Sub 3"
-                android:fontFamily="sans-serif-smallcaps"
+                android:paddingLeft="8dp"
                 android:textColor="#000"
-                android:textSize="12sp"
+                android:textSize="20sp"
+                android:padding="5dp"
                 />
 
         </LinearLayout>
