--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5fb0c9"
+    android:background="@color/blue_grey_300"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true">
 
@@ -26,7 +26,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="70dp"
-        android:background="#fff"
+        android:background="@drawable/rounded"
         android:elevation="4dp"
         android:orientation="vertical"
         android:padding="20dp">
@@ -48,6 +48,7 @@
                     android:drawableTint="#FF4081"
                     android:singleLine="true"
                     android:hint="Email"
+                    android:drawableLeft="@drawable/user"
                     android:inputType="textEmailAddress" />
             </android.support.design.widget.TextInputLayout>
 
@@ -61,8 +62,9 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:singleLine="true"
-                     android:drawableTint="#FF4081"
+                    android:drawableTint="#FF4081"
                     android:hint="Password"
+                    android:drawableLeft="@drawable/password"
                     android:inputType="numberPassword" />
             </android.support.design.widget.TextInputLayout>
 
@@ -70,29 +72,19 @@
                 android:id="@+id/button_login"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#d67601"
+                android:background="@drawable/rounded"
                 android:text="Sign in"
                 android:textAllCaps="false"
-                android:textColor="#fff"
+                android:textColor="@color/blue_A700"
                 android:textSize="18sp" />
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="OR"
-                android:textSize="20sp"
-                android:textStyle="bold"
-                android:layout_gravity="center"
-                android:layout_centerHorizontal="true"/>
             <Button
                 android:id="@+id/button_register"
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="10dp"
-                android:background="#d67601"
+                android:background="@drawable/rounded"
                 android:text="Register"
                 android:textAllCaps="false"
-                android:textColor="#fff"
+                android:textColor="@color/blue_A700"
                 android:textSize="18sp" />
         </LinearLayout>
     </RelativeLayout>
@@ -104,6 +96,7 @@
         android:layout_below="@+id/login_title"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="16dp"
+        android:src="@drawable/userlogo"
         android:background="@drawable/user_image_profile_background"
         android:elevation="4dp"/>
         </RelativeLayout>
