--- a/app/src/main/res/layout/fragment_register.xml
+++ b/app/src/main/res/layout/fragment_register.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#5fb0c9"
+    android:background="@color/blue_grey_300"
     android:orientation="vertical"
     android:scrollbarAlwaysDrawVerticalTrack="true">
 
@@ -27,7 +27,7 @@
         android:layout_marginLeft="30dp"
         android:layout_marginRight="30dp"
         android:layout_marginTop="70dp"
-        android:background="#fff"
+        android:background="@drawable/rounded"
         android:elevation="4dp"
         android:orientation="vertical"
         android:padding="20dp">
@@ -47,6 +47,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:drawableTint="#FF4081"
+                    android:drawableLeft="@drawable/user"
                     android:singleLine="true"
                     android:hint="Email"
                     android:inputType="textEmailAddress" />
@@ -61,6 +62,7 @@
                     android:layout_width="fill_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
+                    android:drawableLeft="@drawable/password"
                     android:singleLine="true"
                     android:drawableTint="#FF4081"
                     android:hint="Password"
@@ -72,10 +74,10 @@
                 android:layout_width="fill_parent"
                 android:layout_height="wrap_content"
                 android:layout_margin="10dp"
-                android:background="#d67601"
+                android:background="@drawable/rounded"
                 android:text="Register"
                 android:textAllCaps="false"
-                android:textColor="#fff"
+                android:textColor="@color/blue_A700"
                 android:textSize="18sp" />
         </LinearLayout>
     </RelativeLayout>
@@ -86,6 +88,7 @@
         android:layout_height="100dp"
         android:layout_below="@+id/login_title"
         android:layout_centerHorizontal="true"
+        android:src="@drawable/add_user"
         android:layout_marginTop="16dp"
         android:background="@drawable/user_image_profile_background"
         android:elevation="4dp"/>
